# ariadne-0630

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ariadne.db  benchmark_report.json  multica-python-调查报告.md  pyproject.toml  简历-Ariadne.md
.github/workflows/: ci.yml
benchmarks/runners/: aggregate.py  artifact_spine.py  control_plane_concurrency.py  real_backend_patch.py  run_suite.py  squad_routing.py  state_machine_recovery.py  trace_replay.py
docs/: INDEX.md  demo-v1.md
docs/adr/: 0010-open-execution-backend-registry.md  0011-provider-session-resume-and-mcp-config.md  0012-skills-as-capability-packages.md  0013-isolation-first-real-backend-execution.md  0014-daemon-lifecycle-and-crash-recovery.md
docs/architecture/: README.md  daemon-lifecycle.md  dashboard-layout.md  deep-execution.md  harness-backend.md  multica-mapping.md  real-squad.md  (+3 more)
frontend/: DESIGN.md  package-lock.json  package.json  tailwind.config.ts
scripts/: demo_v1.sh  run_benchmark.sh
tests/: test_agent_profile_skill.py  test_api.py  test_backend_integration.py  test_backends.py  test_benchmark_run_product_facts.py  test_benchmarking.py  test_briefing.py  test_clean_checkout_demo.py  test_coverage_gaps.py  test_daemon.py  test_deep_backend.py  test_eval.py  test_execution_policy.py  test_issue_timeline.py  test_leader_decision_outcomes.py  test_llm_decide.py  test_models.py  test_orchestrator.py  test_real_squad.py  test_runner.py  test_runtime_lease.py  test_runtime_registration.py  test_squad_e2e.py  test_state_machine.py  test_store.py  test_taskrun_compat.py  test_trace.py
(+82 files in other folders)
