[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne"
version = "0.1.0"
description = "Ariadne: local multi-agent orchestration platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
ariadne = "ariadne.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ariadne"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
